[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-cracker"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
description = "A DSA progress tracking application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.32.0",
    "pandas==2.1.0",
    "plotly==5.18.0",
    "numpy==1.22.0",
    "altair==4.2.0",
    "pillow==9.0.0",
    "toml==0.10.2",
    "watchdog==2.1.6",
    "python-dateutil==2.8.2",
    "bcrypt==4.0.1",
    "tzdata==2023.3"
]

[project.urls]
"Homepage" = "https://github.com/himanchalkaushale/DSA-Tracker"
"Bug Tracker" = "https://github.com/himanchalkaushale/DSA-Tracker/issues"
